syntax = "proto3";

package YellowPages;

message Phone {
  string formatted = 1;
  string type = 2;
  string country_code = 3;
  string local_code = 4;
  string number = 5;
  string extension = 6;
  string description = 7;
}
